@@ -1,3 +1,11 @@
+
+
+>  本文已经收录到github仓库，此仓库用于分享Java相关知识总结，包括Java基础、MySQL、Springboot、mybatis、Redis、rabbitMQ等等，欢迎大家提pr和star！
+>
+> github地址：https://github.com/Tyson0314/Java-learning
+>
+> gitee地址：https://gitee.com/tysondai/Java-learning
+
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
@@ -21,13 +29,8 @@
   - [准备](#%E5%87%86%E5%A4%87)
   - [解析](#%E8%A7%A3%E6%9E%90)
   - [初始化](#%E5%88%9D%E5%A7%8B%E5%8C%96)
-- [main方法执行过程](#main%E6%96%B9%E6%B3%95%E6%89%A7%E8%A1%8C%E8%BF%87%E7%A8%8B)
-- [对象创建过程](#%E5%AF%B9%E8%B1%A1%E5%88%9B%E5%BB%BA%E8%BF%87%E7%A8%8B)
 - [双亲委派模型](#%E5%8F%8C%E4%BA%B2%E5%A7%94%E6%B4%BE%E6%A8%A1%E5%9E%8B)
-- [堆内存分配策略](#%E5%A0%86%E5%86%85%E5%AD%98%E5%88%86%E9%85%8D%E7%AD%96%E7%95%A5)
-  - [对象优先在 eden 区分配](#%E5%AF%B9%E8%B1%A1%E4%BC%98%E5%85%88%E5%9C%A8-eden-%E5%8C%BA%E5%88%86%E9%85%8D)
-  - [大对象直接进入老年代](#%E5%A4%A7%E5%AF%B9%E8%B1%A1%E7%9B%B4%E6%8E%A5%E8%BF%9B%E5%85%A5%E8%80%81%E5%B9%B4%E4%BB%A3)
-  - [长期存活的对象将进入老年代](#%E9%95%BF%E6%9C%9F%E5%AD%98%E6%B4%BB%E7%9A%84%E5%AF%B9%E8%B1%A1%E5%B0%86%E8%BF%9B%E5%85%A5%E8%80%81%E5%B9%B4%E4%BB%A3)
+  - [实现](#%E5%AE%9E%E7%8E%B0)
 - [对象死亡](#%E5%AF%B9%E8%B1%A1%E6%AD%BB%E4%BA%A1)
   - [引用计数法](#%E5%BC%95%E7%94%A8%E8%AE%A1%E6%95%B0%E6%B3%95)
   - [可达性分析](#%E5%8F%AF%E8%BE%BE%E6%80%A7%E5%88%86%E6%9E%90)
@@ -39,15 +42,25 @@
     - [虚引用](#%E8%99%9A%E5%BC%95%E7%94%A8)
   - [常量回收](#%E5%B8%B8%E9%87%8F%E5%9B%9E%E6%94%B6)
   - [类的卸载](#%E7%B1%BB%E7%9A%84%E5%8D%B8%E8%BD%BD)
-- [gc分类](#gc%E5%88%86%E7%B1%BB)
-- [堆结构](#%E5%A0%86%E7%BB%93%E6%9E%84)
+- [内存分配与回收策略](#%E5%86%85%E5%AD%98%E5%88%86%E9%85%8D%E4%B8%8E%E5%9B%9E%E6%94%B6%E7%AD%96%E7%95%A5)
+  - [Minor GC 和 Full GC](#minor-gc-%E5%92%8C-full-gc)
+  - [内存分配策略](#%E5%86%85%E5%AD%98%E5%88%86%E9%85%8D%E7%AD%96%E7%95%A5)
+    - [对象优先在 Eden 分配](#%E5%AF%B9%E8%B1%A1%E4%BC%98%E5%85%88%E5%9C%A8-eden-%E5%88%86%E9%85%8D)
+    - [大对象直接进入老年代](#%E5%A4%A7%E5%AF%B9%E8%B1%A1%E7%9B%B4%E6%8E%A5%E8%BF%9B%E5%85%A5%E8%80%81%E5%B9%B4%E4%BB%A3)
+    - [长期存活的对象进入老年代](#%E9%95%BF%E6%9C%9F%E5%AD%98%E6%B4%BB%E7%9A%84%E5%AF%B9%E8%B1%A1%E8%BF%9B%E5%85%A5%E8%80%81%E5%B9%B4%E4%BB%A3)
+    - [动态对象年龄判定](#%E5%8A%A8%E6%80%81%E5%AF%B9%E8%B1%A1%E5%B9%B4%E9%BE%84%E5%88%A4%E5%AE%9A)
+    - [空间分配担保](#%E7%A9%BA%E9%97%B4%E5%88%86%E9%85%8D%E6%8B%85%E4%BF%9D)
+  - [Full GC 的触发条件](#full-gc-%E7%9A%84%E8%A7%A6%E5%8F%91%E6%9D%A1%E4%BB%B6)
+    - [调用 System.gc()](#%E8%B0%83%E7%94%A8-systemgc)
+    - [老年代空间不足](#%E8%80%81%E5%B9%B4%E4%BB%A3%E7%A9%BA%E9%97%B4%E4%B8%8D%E8%B6%B3)
+    - [空间分配担保失败](#%E7%A9%BA%E9%97%B4%E5%88%86%E9%85%8D%E6%8B%85%E4%BF%9D%E5%A4%B1%E8%B4%A5)
 - [垃圾回收算法](#%E5%9E%83%E5%9C%BE%E5%9B%9E%E6%94%B6%E7%AE%97%E6%B3%95)
-  - [分类收集算法](#%E5%88%86%E7%B1%BB%E6%94%B6%E9%9B%86%E7%AE%97%E6%B3%95)
-    - [记忆集](#%E8%AE%B0%E5%BF%86%E9%9B%86)
   - [标记清除算法](#%E6%A0%87%E8%AE%B0%E6%B8%85%E9%99%A4%E7%AE%97%E6%B3%95)
   - [复制清除算法](#%E5%A4%8D%E5%88%B6%E6%B8%85%E9%99%A4%E7%AE%97%E6%B3%95)
   - [标记整理算法](#%E6%A0%87%E8%AE%B0%E6%95%B4%E7%90%86%E7%AE%97%E6%B3%95)
-- [垃圾回收器](#%E5%9E%83%E5%9C%BE%E5%9B%9E%E6%94%B6%E5%99%A8)
+  - [分类收集算法](#%E5%88%86%E7%B1%BB%E6%94%B6%E9%9B%86%E7%AE%97%E6%B3%95)
+    - [记忆集](#%E8%AE%B0%E5%BF%86%E9%9B%86)
+- [垃圾收集器](#%E5%9E%83%E5%9C%BE%E6%94%B6%E9%9B%86%E5%99%A8)
   - [Serial 收集器](#serial-%E6%94%B6%E9%9B%86%E5%99%A8)
   - [ParNew 收集器](#parnew-%E6%94%B6%E9%9B%86%E5%99%A8)
   - [Parallel Scavenge 收集器](#parallel-scavenge-%E6%94%B6%E9%9B%86%E5%99%A8)
@@ -58,31 +71,28 @@
     - [CMS垃圾回收特点](#cms%E5%9E%83%E5%9C%BE%E5%9B%9E%E6%94%B6%E7%89%B9%E7%82%B9)
   - [G1收集器](#g1%E6%94%B6%E9%9B%86%E5%99%A8)
     - [回收过程](#%E5%9B%9E%E6%94%B6%E8%BF%87%E7%A8%8B-1)
-    - [YoungGC](#younggc)
-    - [MixedGC](#mixedgc)
-  - [Shenandoah收集器](#shenandoah%E6%94%B6%E9%9B%86%E5%99%A8)
-- [对象头](#%E5%AF%B9%E8%B1%A1%E5%A4%B4)
-- [JVM参数](#jvm%E5%8F%82%E6%95%B0)
 - [JVM调优工具](#jvm%E8%B0%83%E4%BC%98%E5%B7%A5%E5%85%B7)
   - [jps](#jps)
   - [jstack](#jstack)
   - [jstat](#jstat)
   - [jmap](#jmap)
-  - [高cpu高内存分析](#%E9%AB%98cpu%E9%AB%98%E5%86%85%E5%AD%98%E5%88%86%E6%9E%90)
-- [Full GC触发条件](#full-gc%E8%A7%A6%E5%8F%91%E6%9D%A1%E4%BB%B6)
-- [线上频繁fullgc/oom](#%E7%BA%BF%E4%B8%8A%E9%A2%91%E7%B9%81fullgcoom)
-- [内存泄露解决](#%E5%86%85%E5%AD%98%E6%B3%84%E9%9C%B2%E8%A7%A3%E5%86%B3)
-- [排查Java程序内存溢出问题](#%E6%8E%92%E6%9F%A5java%E7%A8%8B%E5%BA%8F%E5%86%85%E5%AD%98%E6%BA%A2%E5%87%BA%E9%97%AE%E9%A2%98)
+- [补充](#%E8%A1%A5%E5%85%85)
+  - [对象头](#%E5%AF%B9%E8%B1%A1%E5%A4%B4)
+  - [main方法执行过程](#main%E6%96%B9%E6%B3%95%E6%89%A7%E8%A1%8C%E8%BF%87%E7%A8%8B)
+  - [对象创建过程](#%E5%AF%B9%E8%B1%A1%E5%88%9B%E5%BB%BA%E8%BF%87%E7%A8%8B)
+- [参考资料](#%E5%8F%82%E8%80%83%E8%B5%84%E6%96%99)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
 ## 内存结构
 
-java内存模型（JMM）是基于共享内存的多线程通信机制。
+Java 内存模型（JMM）是基于共享内存的多线程通信机制。
 
 JVM内存结构 = 类加载器 + 执行引擎 + 运行时数据区域 。
 
-![](../img/java-ram-region.png)
+![image-20210905150636105](https://gitee.com/tysondai/img/raw/master/image-20210905150636105.png)
+
+> 图片来源：深入理解Java虚拟机-周志明
 
 ### 程序计数器
 
@@ -101,14 +111,20 @@ Java 虚拟机栈是由一个个栈帧组成，而每个栈帧中都拥有：局
 
 每个栈帧都包含一个指向运行时常量池中该栈所属方法的符号引用，在方法调用过程中，会进行动态链接，将这个符号引用转化为直接引用。
 
-- 部分符号引用在类加载阶段(解析)的时候就转化为直接引用，这种转化为静态链接
-- 部分符号引用在运行期间转化为直接引用，这种转化为动态链接
+- 部分符号引用在类加载阶段的时候就转化为直接引用，这种转化就是静态链接
+- 部分符号引用在运行期间转化为直接引用，这种转化就是动态链接
 
 Java 虚拟机栈也是线程私有的，每个线程都有各自的 Java 虚拟机栈，而且随着线程的创建而创建，随着线程的死亡而死亡。Java 虚拟机栈会出现两种错误：`StackOverFlowError` 和 `OutOfMemoryError`。
 
+可以通过 -Xss 参数来指定每个线程的 Java 虚拟机栈内存大小，在 JDK 1.4 中默认为 256K，而在 JDK 1.5+ 默认为 1M：
+
+```java
+java -Xss2M
+```
+
 ### 本地方法栈
 
-虚拟机栈为虚拟机执行 Java 方法服务，而本地方法栈则为虚拟机使用到的 Native 方法服务。
+虚拟机栈为虚拟机执行 Java 方法服务，而本地方法栈则为虚拟机使用到的 Native 方法服务。Native 方法一般是用其它语言（C、C++ 或汇编语言等）编写的，并且被编译为基于本机硬件和操作系统的程序，对待这些方法需要特别处理。
 
 本地方法被执行的时候，在本地方法栈也会创建一个栈帧，用于存放该本地方法的局部变量表、操作数栈、动态链接、出口信息。
 
@@ -117,6 +133,14 @@ Java 虚拟机栈也是线程私有的，每个线程都有各自的 Java 虚拟
 此内存区域的唯一目的就是存放对象实例，几乎所有的对象实例以及数组都在这里分配内存。Java 堆是垃圾收集器管理的主要区域，因此也被称作GC堆。
 
 Java 堆可以细分为：新生代（Eden 空间、From Survivor、To Survivor 空间）和老年代。进一步划分的目的是更好地回收内存，或者更快地分配内存。
+
+通过 -Xms设定程序启动时占用内存大小，通过 -Xmx 设定程序运行期间最大可占用的内存大小。如果程序运行需要占用更多的内存，超出了这个设置值，就会抛出OutOfMemory异常。
+
+```java
+java -Xms1M -Xmx2M
+```
+
+通过 -Xss 设定每个线程的堆栈大小。设置这个参数，需要评估一个线程大约需要占用多少内存，可能会有多少线程同时运行等。
 
 ### 方法区
 
@@ -134,17 +158,19 @@ JDK 1.8 的时候，HotSpot 的永久代被彻底移除了，使用元空间替�
 
 为什么要将永久代替换为元空间呢?
 
-永久代内存受限于 JVM 可用内存，而元空间使用的是直接内存，受本机可用内存的限制，虽然元空间仍旧可能溢出，但是比永久代内存溢出的概率更小。
+永久代内存受限于 JVM 可用内存，而元空间使用的是直接内存，受本机可用内存的限制，虽然元空间仍旧可能溢出，但是相比永久代内存溢出的概率更小。
 
 ### 运行时常量池
 
 运行时常量池是方法区的一部分，在类加载之后，会将编译器生成的各种字面量和符号引号放到运行时常量池。在运行期间动态生成的常量，如 String 类的 intern()方法，也会被放入运行时常量池。
 
-![](../img/jvm/string-new.png)
+![](https://gitee.com/tysondai/img/raw/master/string-new.png)
 
-![](../img/jvm/string-intern.png)
+![](https://gitee.com/tysondai/img/raw/master/string-intern.png)
 
-![](../img/jvm/string-equal.png)
+![](https://gitee.com/tysondai/img/raw/master/string-equal.png)
+
+> 图片来源：https://blog.csdn.net/soonfly
 
 ### 直接内存
 
@@ -160,11 +186,11 @@ Java 程序通过栈上的 reference 数据来操作堆上的具体对象。对�
 
 1. 如果使用句柄的话，那么 Java 堆中将会划分出一块内存来作为句柄池，reference 中存储的就是对象的句柄地址，而句柄中包含了对象实例数据与类型数据各自的具体地址信息。使用句柄来访问的最大好处是 reference 中存储的是稳定的句柄地址，在对象被移动时只会改变句柄中的实例数据指针，而 reference 本身不需要修改。
 
-   ![image-20200628085914755](../img/object-handle.png)
+   ![](https://gitee.com/tysondai/img/raw/master/object-handle.png)
 
 2. 直接指针。reference 中存储的直接就是对象的地址。对象包含到对象类型数据的指针，通过这个指针可以访问对象类型数据。使用直接指针访问方式最大的好处就是访问对象速度快，它节省了一次指针定位的时间开销，虚拟机hotspot主要是使用直接指针来访问对象。
 
-   ![image-20200628085929886](../img/direct-pointer.png)
+   ![](https://gitee.com/tysondai/img/raw/master/direct-pointer.png)
 
 
 
@@ -211,11 +237,11 @@ ClassFile {
 
 加载、验证、准备、解析、初始化、使用和卸载。
 
+![](https://gitee.com/tysondai/img/raw/master/image-20210905002423703.png)
+
 ## 类加载的过程
 
 类的加载指的是将类的class文件中的二进制数据读入到内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个对象，这个对象封装了类在方法区内的数据结构，并且提供了访问方法区内的类信息的接口。
-
-![](https://images2018.cnblogs.com/blog/1252910/201804/1252910-20180413111024346-2117412865.png)
 
 ### 加载
 
@@ -228,7 +254,6 @@ ClassFile {
 ### 验证
 
 确保Class文件的字节流中包含的信息符合虚拟机规范，保证这些信息被当作代码运行后不会危害虚拟机自身的安全。主要包括四种验证：文件格式验证，元数据验证，字节码验证，符号引用验证。
-![在这里插入图片描述](https://img-blog.csdnimg.cn/20200614231531466.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1R5c29uMDMxNA==,size_16,color_FFFFFF,t_70)
 
 ### 准备
 
@@ -244,90 +269,61 @@ ClassFile {
 
 
 
-## main方法执行过程
-
-```java
-public class App {
-    public static void main(String[] args) {
-        Student s = new Student("tyson");
-        s.getName();
-    }
-}
-
-class Student {
-    public String name;
-
-    public Student(String name) {
-        this.name = name;
-    }
-
-    public String getName() {
-        return this.name;
-    }
-}
-```
-
-执行main方法的步骤如下:
-
-1. 编译好 App.java 后得到 App.class 后，执行 App.class，系统会启动一个 JVM 进程，从 classpath 路径中找到一个名为 App.class 的二进制文件，将 App 的类信息加载到运行时数据区的方法区内，这个过程叫做 App 类的加载
-2. JVM 找到 App 的主程序入口，执行main方法
-3. 这个main中的第一条语句为 `Student student = new Student("tyson") `，就是让 JVM 创建一个Student对象，但是这个时候方法区中是没有 Student 类的信息的，所以 JVM 马上加载 Student 类，把 Student 类的信息放到方法区中
-4. 加载完 Student 类后，JVM 在堆中为一个新的 Student 实例分配内存，然后调用构造函数初始化 Student 实例，这个 Student 实例持有 **指向方法区中的 Student 类的类型信息** 的引用
-5. 执行student.getName();时，JVM 根据 student 的引用找到 student 对象，然后根据 student 对象持有的引用定位到方法区中 student 类的类型信息的方法表，获得 getName() 的字节码地址。
-6. 执行getName()
-
-
-
-## 对象创建过程
-
-1. 类加载检查
-
-   虚拟机遇到一条 new 指令时，首先将去检查这个指令的参数是否能在常量池中定位到这个类的符号引用，并且检查这个符号引用代表的类是否已被加载过、解析和初始化过。如果没有，那必须先执行相应的类加载过程。
-
-2. 分配内存
-
-   在类加载检查通过后，接下来虚拟机将为新生对象分配内存。对象所需的内存大小在类加载完成后便可确定，为对象分配空间的任务等同于把一块确定大小的内存从 Java 堆中划分出来。
-
-3. 初始化零值
-
-   分配到的内存空间都初始化为零值（不包括对象头），这一步操作保证了对象的实例字段在 Java 代码中可以不赋初始值就直接使用，程序能访问到这些字段的数据类型所对应的零值。
-
-4. 设置对象头
-
-   Hotspot 虚拟机的对象头包括两部分信息，第一部分用于存储对象自身的运行时数据（哈希码、GC 分代年龄、锁状态标志等等），另一部分是类型指针，即对象指向它的类元数据的指针，虚拟机通过这个指针来确定这个对象是那个类的实例。
-
-5. 执行init方法
-
-   按照Java代码进行初始化。
-
-
-
 ## 双亲委派模型
 
 一个类加载器收到一个类的加载请求时，它首先不会自己尝试去加载它，而是把这个请求委派给父类加载器去完成，这样层层委派，因此所有的加载请求最终都会传送到顶层的启动类加载器中，只有当父类加载器反馈自己无法完成这个加载请求时，子加载器才会尝试自己去加载。
 
-![](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9pbWcyMDE4LmNuYmxvZ3MuY29tL2Jsb2cvMTI1MjkxMC8yMDE4MDkvMTI1MjkxMC0yMDE4MDkyMDA5NTMzODQ4MS03NDU0MDY4NDEucG5n?x-oss-process=image/format,png)
+![](https://gitee.com/tysondai/img/raw/master/image-20210905002827546.png)
 
-双亲委派模型的好处：即防止内存中出现多份同样的字节码。
-如果没有双亲委派模型而是由各个类加载器自行加载的话，如果用户编写了一个java.lang.Object的同名类并放在ClassPath中，多个类加载器都去加载这个类到内存中，系统中将会出现多个不同的Object类，那么类之间的比较结果及类的唯一性将无法保证。
+双亲委派模型的好处：可以防止内存中出现多份同样的字节码。如果没有双亲委派模型而是由各个类加载器自行加载的话，如果用户编写了一个java.lang.Object的同名类并放在ClassPath中，多个类加载器都去加载这个类到内存中，系统中将会出现多个不同的Object类，那么类之间的比较结果及类的唯一性将无法保证。
 
+### 实现
 
+双亲委派模型的具体实现代码在抽象类 java.lang.ClassLoader 中，此类的 loadClass() 方法运行过程如下：先检查类是否已经加载过，如果没有则让父类加载器去加载。当父类加载器加载失败时抛出 ClassNotFoundException，此时尝试自己去加载。
 
-## 堆内存分配策略
+```java
+public abstract class ClassLoader {
+    // The parent class loader for delegation
+    private final ClassLoader parent;
 
-在 run configuration 的 vm options 添加`-XX:+PrintGCDetails`可以查看 gc 信息。
+    public Class<?> loadClass(String name) throws ClassNotFoundException {
+        return loadClass(name, false);
+    }
 
-### 对象优先在 eden 区分配
+    protected Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundException {
+        synchronized (getClassLoadingLock(name)) {
+            // First, check if the class has already been loaded
+            Class<?> c = findLoadedClass(name);
+            if (c == null) {
+                try {
+                    if (parent != null) {
+                        c = parent.loadClass(name, false);
+                    } else {
+                        c = findBootstrapClassOrNull(name);
+                    }
+                } catch (ClassNotFoundException e) {
+                    // ClassNotFoundException thrown if class not found
+                    // from the non-null parent class loader
+                }
 
-大多数情况下，对象在新生代中 eden 区分配。当 eden 区没有足够空间进行分配时，虚拟机将发起一次 Minor GC。
+                if (c == null) {
+                    // If still not found, then invoke findClass in order
+                    // to find the class.
+                    c = findClass(name);
+                }
+            }
+            if (resolve) {
+                resolveClass(c);
+            }
+            return c;
+        }
+    }
 
-### 大对象直接进入老年代
-
-大对象就是需要大量连续内存空间的对象（比如：字符串、数组）。为了避免为大对象分配内存时由于分配担保机制带来的复制而降低效率。
-
-### 长期存活的对象将进入老年代
-
-通过参数 `-XX:MaxTenuringThreshold` 可以设置对象进入老年代的年龄阈值。对象在 Survivor 中每经过一次 MinorGC，年龄就增加 1 岁，当它的年龄增加到一定程度，就会被晋升到老年代中。
+    protected Class<?> findClass(String name) throws ClassNotFoundException {
+        throw new ClassNotFoundException(name);
+    }
+}
+```
 
 
 
@@ -335,7 +331,7 @@ class Student {
 
 堆中几乎放着所有的对象实例，对堆垃圾回收前的第一步就是要判断那些对象已经死亡（即不能再被任何途径使用的对象）。
 
-![](../img/object-dead.png)
+![](https://gitee.com/tysondai/img/raw/master/object-dead.png)
 
 ### 引用计数法
 
@@ -361,7 +357,7 @@ public class ReferenceCountingGc {
 
 通过GC Root对象为起点，从这些节点向下搜索，搜索所走过的路径叫引用链，当一个对象到GC Root没有任何的引用链相连时，说明这个对象是不可用的。
 
-![](../img/gc-root-refer.png)
+![](https://gitee.com/tysondai/img/raw/master/gc-root-refer.png)
 
 #### 可作为GC Roots的对象
 
@@ -409,34 +405,86 @@ public class ReferenceCountingGc {
 
 
 
-## gc分类
+## 内存分配与回收策略
 
-minor gc: 从新生代空间（Eden和survivor区域）回收内存
-major gc: 清理老年代
-full gc: 清理整个堆空间
+### Minor GC 和 Full GC
 
-- 新生代 GC（Minor GC）:指发生新生代的的垃圾收集动作，Minor GC 非常频繁，回收速度一般也比较快。
-- 老年代 GC（Major GC/Full GC）:指发生在老年代的 GC，出现了 Major GC 经常会伴随至少一次的 Minor GC（并非绝对），Major GC 的速度一般会比 Minor GC 的慢 10 倍以上。
+- Minor GC：回收新生代，因为新生代对象存活时间很短，因此 Minor GC 会频繁执行，执行的速度一般也会比较快。
 
-## 堆结构
+- Full GC：回收老年代和新生代，老年代对象其存活时间长，因此 Full GC 很少执行，执行速度会比 Minor GC 慢很多。
 
-![](../img/heap-structure.png)
+### 内存分配策略
 
-把新生代分为一块较大的Eden空间和两块较小的Survivor空间，每次分配内存只使用Eden和其中一块Survivor。发生垃圾收集时，将Eden和Survivor中仍然存活的对象一次性复制到另外一块Survivor空间上，然后直接清理掉Eden和已用过的那块Survivor空间。HotSpot虚拟机默认Eden和Survivor的大小比例是8∶1。
+#### 对象优先在 Eden 分配
 
-当Survivor空间不足以容纳一次Minor GC之后存活的对象时，就需要依赖其他内存区域（实际上大多就是老年代）进行分配担保（Handle Promotion）。
+大多数情况下，对象在新生代 Eden 上分配，当 Eden 空间不够时，发起 Minor GC。
 
-每经过一次 minor gc， 对象的年龄会加1，Hotspot遍历所有对象时，按照年龄从小到大进行累积，当累积的某个年龄超过了survivor区空间的一半时，取这个年龄和对象晋升到老年代的年龄阈值MaxTenuringThreshold中更小的一个值，作为新的晋升年龄阈值，年龄超过这个值的对象，会移动到老年代。老年代是存储长期存活的对象的，占满时就会触发Full GC，期间会停止所有线程等待GC的完成。
+#### 大对象直接进入老年代
 
-当老年区执行了full gc之后仍然无法进行对象保存的操作，就会产生OOM，这时候就是虚拟机中的堆内存不足，原因可能会是堆内存设置的大小过小，这个可以通过参数-Xms、-Xmx来调整。也可能是代码中创建的对象大且多，而且它们一直在被引用，导致垃圾收集无法收集它们。
+大对象是指需要连续内存空间的对象，最典型的大对象是那种很长的字符串以及数组。经常出现大对象会提前触发垃圾收集以获取足够的连续空间分配给大对象。
+
+可以设置JVM参数 -XX:PretenureSizeThreshold，大于此值的对象直接在老年代分配，避免在 Eden 和 Survivor 之间的大量内存复制。
+
+#### 长期存活的对象进入老年代
+
+通过参数 `-XX:MaxTenuringThreshold` 可以设置对象进入老年代的年龄阈值。对象在 Survivor 中每经过一次 MinorGC，年龄就增加 1 岁，当它的年龄增加到一定程度，就会被晋升到老年代中。
+
+#### 动态对象年龄判定
+
+虚拟机并不是永远要求对象的年龄必须达到 MaxTenuringThreshold 才能晋升老年代，如果在 Survivor 中相同年龄所有对象大小的总和大于 Survivor 空间的一半，则年龄大于或等于该年龄的对象可以直接进入老年代，无需等到 MaxTenuringThreshold 中要求的年龄。
+
+#### 空间分配担保
+
+在发生 Minor GC 之前，虚拟机先检查老年代最大可用的连续空间是否大于新生代所有对象总空间，如果条件成立的话，那么 Minor GC 可以确认是安全的。如果不成立的话虚拟机会查看 HandlePromotionFailure 的值是否允许担保失败。如果允许，那么就会继续检查老年代最大可用的连续空间是否大于历次晋升到老年代对象的平均大小，如果大于，将尝试着进行一次 Minor GC；如果小于，或者 HandlePromotionFailure 的值不允许冒险，那么就要进行一次 Full GC。
+
+### Full GC 的触发条件
+
+对于 Minor GC，其触发条件比较简单，当 Eden 空间满时，就将触发一次 Minor GC。而 Full GC 触发条件相对复杂，有以下条件：
+
+#### 调用 System.gc()
+
+只是建议虚拟机执行 Full GC，但是虚拟机不一定真正去执行。不建议使用这种方式，而是让虚拟机管理内存。
+
+#### 老年代空间不足
+
+老年代空间不足的常见场景为前文所讲的大对象直接进入老年代、长期存活的对象进入老年代等。为了避免以上原因引起的 Full GC，应当尽量不要创建过大的对象以及数组。除此之外，可以通过 -Xmn 参数调大新生代的大小，让对象尽量在新生代被回收掉，不进入老年代。还可以通过 -XX:MaxTenuringThreshold 调大对象进入老年代的年龄，让对象在新生代多存活一段时间。
+
+#### 空间分配担保失败
+
+使用复制算法的 Minor GC 需要老年代的内存空间作担保，如果担保失败会执行一次 Full GC。
 
 
 
 ## 垃圾回收算法
 
+### 标记清除算法
+
+标记清除算法就是分为“标记”和“清除”两个阶段。标记出所有需要回收的对象，标记结束后统一回收所有被标记的对象。这种垃圾回收算法效率较低，并且会产生大量不连续的空间碎片。
+
+![](https://gitee.com/tysondai/img/raw/master/image-20210905003458130.png)
+
+### 复制清除算法
+
+半区复制，用于新生代垃圾回收。将内存分为大小相同的两块，每次使用其中的一块。当这一块的内存使用完后，就将还存活的对象复制到另一块去，然后再把使用的空间一次清理掉。
+
+![](https://gitee.com/tysondai/img/raw/master/image-20210905003714551.png)
+
+特点：实现简单，运行高效，但可用内存缩小为了原来的一半，浪费空间。
+
+### 标记整理算法
+
+根据老年代的特点提出的一种标记算法，标记过程仍然与“标记-清除”算法一样，但后续步骤不是直接对可回收对象进行清理，而是让所有存活的对象都向一端移动，然后直接清理掉边界以外的内存。
+
 ### 分类收集算法
 
-根据各个年代的特点采用最适当的收集算法。在新生代中，每次垃圾收集时都发现有大批对象死去，只有少量存活，那就选用复制算法，只需要付出少量存活对象的复制成本就可以完成收集。而老年代中因为对象存活率高、没有额外空间对它进行分配担保，就必须使用“标记-清理”或者“标记-整理”算法来进行回收。
+根据各个年代的特点采用最适当的收集算法。
+
+一般将堆分为新生代和老年代。
+
+- 新生代使用：复制算法
+- 老年代使用：标记清除算法或者标记整理算法
+
+在新生代中，每次垃圾收集时都发现有大批对象死去，只有少量存活，那就选用复制算法，只需要付出少量存活对象的复制成本就可以完成收集。而老年代中因为对象存活率高、没有额外空间对它进行分配担保，就必须使用“标记-清理”或者“标记-整理”算法来进行回收。
 
 由于对象之间会存在跨代引用，如果要进行一次新生代垃圾收集，除了需要遍历新生代对象，还要额外遍历整个老年代的所有对象，这会给内存回收带来很大的性能负担。
 
@@ -452,25 +500,7 @@ full gc: 清理整个堆空间
 
 
 
-### 标记清除算法
-
-标记清除算法就是分为“标记”和“清除”两个阶段。标记出所有需要回收的对象，标记结束后统一回收所有被标记的对象。这种垃圾回收算法效率较低，并且会产生大量不连续的空间碎片。
-
-### 复制清除算法
-
-半区复制，用于新生代垃圾回收。将内存分为大小相同的两块，每次使用其中的一块。当这一块的内存使用完后，就将还存活的对象复制到另一块去，然后再把使用的空间一次清理掉。
-
-特点：实现简单，运行高效，但可用内存缩小为了原来的一半，浪费空间。
-
-### 标记整理算法
-
-根据老年代的特点提出的一种标记算法，标记过程仍然与“标记-清除”算法一样，但后续步骤不是直接对可回收对象进行清理，而是让所有存活的对象都向一端移动，然后直接清理掉边界以外的内存。
-
-
-
-## 垃圾回收器
-
-[垃圾收集器](https://crowhawk.github.io/2017/08/15/jvm_3/)
+## 垃圾收集器
 
 经典的垃圾收集器主要有三种类型：串行收集器、并行收集器和并发标记清除收集器CMS，这三种收集器分别可以是满足Java应用三种不同的需求：内存占用及并发开销最小化、应用吞吐量最大化和应用GC暂停时间最小化。
 
@@ -496,7 +526,7 @@ java -XX:+PrintCommandLineFlags -version
 
 单线程收集器，使用一条垃圾收集线程去完成垃圾收集工作，在进行垃圾收集工作的时候必须暂停其他所有的工作线程（ "Stop The World" ），直到它收集结束。
 
-![](../img/serial-collector.png)
+![](https://gitee.com/tysondai/img/raw/master/serial-collector.png)
 
 特点：简单高效；内存消耗最小；没有线程交互的开销，单线程收集效率高；需暂停所有的工作线程，用户体验不好。
 
@@ -504,7 +534,7 @@ java -XX:+PrintCommandLineFlags -version
 
 Serial 收集器的多线程版本，除了使用多线程进行垃圾收集外，其余行为（控制参数、收集算法、回收策略等等）和 Serial 收集器完全一样。
 
-![](../img/parnew-collector.png)
+![](https://gitee.com/tysondai/img/raw/master/parnew-collector.png)
 
 除了 Serial 收集器外，只有它能与 CMS 收集器配合工作。
 
@@ -544,13 +574,17 @@ Concurrent Mark Sweep 并发标记清除，目的是获取最短应用停顿时�
 - 重新标记： 在并发标记期间对象的引用关系可能会变化，需要重新进行标记。此阶段也会stw，停顿时间一般会比初始标记阶段的时间稍长，远远比并发标记阶段时间短。
 - 并发清除：清除死亡对象，由于不需要移动存活对象，所以这个阶段也是可以与用户线程同时并发的。
 
-![](../img/cms-collector.png)
+![](https://gitee.com/tysondai/img/raw/master/cms-collector.png)
 
 由于在整个过程中耗时最长的并发标记和并发清除阶段中，垃圾收集器线程都可以与用户线程一起工作，所以从总体上来说，CMS收集器的内存回收过程是与用户线程一起并发执行的。
 
 优点：并发收集，低停顿。
 
-缺点：标记清除算法导致收集结束有大量空间碎片；会产生浮动垃圾，由于CMS并发清理阶段用户线程还在运行着，会不断有新的垃圾产生，这一部分垃圾出现在标记过程之后，CMS无法在当次收集中处理掉它们，只好等到下一次GC去处理；对处理器资源非常敏感。在并发阶段，收集器占用了一部分线程资源，导致应用程序变慢，降低总吞吐量。
+缺点：
+
+- 标记清除算法导致收集结束有大量空间碎片，往往出现老年代空间剩余，但无法找到足够大连续空间来分配当前对象，不得不提前触发一次 Full GC。
+- 会产生浮动垃圾，由于CMS并发清理阶段用户线程还在运行着，会不断有新的垃圾产生，这一部分垃圾出现在标记过程之后，CMS无法在当次收集中处理掉它们，只好等到下一次GC去处理；
+- 对处理器资源非常敏感。在并发阶段，收集器占用了一部分线程资源，导致应用程序变慢，降低总吞吐量。
 
 #### CMS垃圾回收特点
 
@@ -565,11 +599,11 @@ G1垃圾收集器的目标是用在多核、大内存的机器上，在不同应
 
 G1将整个堆分成相同大小的分区（Region），有四种不同类型的分区：Eden、Survivor、Old和Humongous（大对象）。分区的大小取值范围为1M到32M，都是2的幂次方。Region大小可以通过`-XX:G1HeapRegionSize`参数指定。Humongous区域用于存储大对象。G1认为只要大小超过了一个Region容量一半的对象即可判定为大对象。
 
-![](../img/g1-region.jpg)
+![](https://gitee.com/tysondai/img/raw/master/g1-region.jpg)
 
 G1 收集器对各个Region回收所获得的空间大小和回收所需时间的经验值进行排序，得到一个优先级列表，每次根据用户设置的最大的回收停顿时间（使用参数-XX：MaxGCPauseMillis指定，默认值是200毫秒），优先处理回收价值最大的 Region。
 
-Java堆分成多个独立Region，Region里面会存在跨Region引用对象，在垃圾回收寻找GC Roots需要扫描整个堆。G1采用了Rset（Remembered Set）来避免扫描整个堆。每个Region会有一个RSet，记录了哪些Region引用本Region中对象，即谁引用了我的对象。
+Java堆分成多个独立Region，Region里面会存在跨Region引用对象，在垃圾回收寻找GC Roots需要扫描整个堆。G1采用了Rset（Remembered Set）来避免扫描整个堆。每个Region会有一个RSet，记录了哪些Region引用本Region中对象，即谁引用了我的对象，这样的话，在做可达性分析的时候就可以避免全堆扫描。
 
 特点：可以由用户指定期望的垃圾收集停顿时间。
 
@@ -581,72 +615,6 @@ G1 收集器的运作大致分为以下几个步骤：
 - 并发标记。从GC Root开始对堆中对象进行可达性分析，递归扫描整个堆里的对象图，找出要回收的对象，这阶段耗时较长，但可与用户程序并发执行。
 - 最终标记。对用户线程做另一个短暂的暂停，用于处理并发阶段对象引用出现变动的区域。
 - 筛选回收。对各个Region的回收价值和成本进行排序，根据用户所期望的停顿时间来制定回收计划，然后把决定回收的那一部分Region的存活对象复制到空的Region中，再清理掉整个旧的Region的全部空间。这里的操作涉及存活对象的移动，是必须暂停用户线程，由多条收集器线程并行完成的。
-
-#### YoungGC
-
-当所有eden region使用达到最大阀值并且无法申请足够内存时，会触发一次YoungGC。每次younggc会回收所有Eden以及Survivor区，并且将存活对象复制到Old区以及另一部分的Survivor区。
-
-#### MixedGC
-
-当越来越多的对象晋升到老年代old region时，为了避免堆内存被耗尽，虚拟机会触发一个混合的垃圾收集器，即mixed gc，该算法并不是一个old gc，除了回收整个young region，还会回收一部分的old region。可以选择哪些old region进行收集，从而可以对垃圾回收的耗时时间进行控制。
-
-### Shenandoah收集器
-
-Shenandoah收集器与G1有三个明显的不同之处：
-
-1. 支持并发的整理算法，G1的回收阶段是可以多线程并行的，但却不能与用户线程并发
-2. 默认不使用分代收集
-3. 摒弃了在G1中耗费大量内存和计算资源去维护的记忆集，改用名为“连接矩阵”（Connection Matrix）的全局数据结构来记录跨Region的引用关系，降低了处理跨代指针时的记忆集维护消耗。连接矩阵可以简单理解为一张二维表格，如果Region N有
-   对象指向Region M，就在表格的N行M列中打上一个标记
-
-
-
-
-## 对象头
-
-Java对象保存在内存中时，由以下三部分组成：对象头、实例数据和对齐填充字节。
-
-java的对象头由以下三部分组成：mark word、指向类信息的指针和数组长度（数组对象才有）。
-
-mark word包含：对象的hashcode、分代年龄和锁标志位。
-
-对象的实例数据就是在java代码中对象的属性和值。
-
-对齐填充字节：因为JVM要求java的对象占的内存大小应该是8bit的倍数，所以后面有几个字节用于把对象的大小补齐至8bit的倍数。
-
-**内存对齐的主要作用是：**
-
-1、 平台原因(移植原因)：不是所有的硬件平台都能访问任意地址上的任意数据的；某些硬件平台只能在某些地址处取某些特定类型的数据，否则抛出硬件异常。
-
-2、 性能原因：经过内存对齐后，CPU的内存访问速度大大提升。
-
-CPU把内存当成是一块一块的，块的大小可以是2，4，8，16字节大小，因此CPU在读取内存时是一块一块进行读取的。
-
-假设CPU要读取一个int型4字节大小的数据到寄存器中，内存读取粒度为4，分两种情况讨论：
-
-1、当该数据是从0字节开始时，很CPU只需读取内存一次即可把这4字节的数据完全读取到寄存器中。
-
-2、当该数据是从1字节开始时，问题变的有些复杂，此时该int型数据不是位于内存读取边界上，这就是一类内存未对齐的数据。此时CPU先访问一次内存，读取0—3字节的数据进寄存器，并再次读取4—5字节的数据进寄存器，接着把0字节和6，7，8字节的数据剔除，最后合并1，2，3，4字节的数据进寄存器。对一个内存未对齐的数据进行了这么多额外的操作，大大降低了CPU性能。以上操作只有有部分CPU肯干，其他一部分CPU遇到未对齐边界就直接罢工了。
-
-
-
-## JVM参数
-
-idea 设置 vm options：`-XX:MetaspaceSize=80m -XX:MaxMetaspaceSize=80m`
-
--Xms 堆初始值
--Xmx 堆最大可用值
--Xmn 新生代堆最大可用值
--XX:SurvivorRatio 用来设置新生代中eden空间和from/to空间的比例
-
--XX:+PrintGC 每次触发GC的时候打印相关日志
--XX:+UseSerialGC 串行回收
--XX:+PrintGCDetails 更详细的GC日志
-
--XX:MaxTenuringThreshold=0：设置垃圾最大年龄。如果设置为0的话，则年轻代对象不经过Survivor区，直接进入年老代。
-
--XX:PermSize=64M JVM初始分配的永久代内存大小，用于存放类信息、静态变量、常量等。当应用需要动态产生大量类的时候，如jsp页面，需要将此参数设置大一点，避免永久代内存溢出。jdk1.8之后使用元空间代替永久代，此参数废弃；
--XX:MaxPermSize=128M JVM最大允许分配的永久代内存；
 
 
 
@@ -715,6 +683,8 @@ jstat -gcutil 4124
 
 查看堆内存快照。查看进程中新生代、老年代、永久代的使用情况。
 
+查询进程4124的堆内存快照：
+
 ```java
 >jmap -heap 4124
 Attaching to process ID 4124, please wait...
@@ -769,39 +739,85 @@ PS Old Generation
 
 
 
-### 高cpu高内存分析
+## 补充
 
-[线上问题排查](https://blog.csdn.net/baiye_xing/article/details/90483169)
+### 对象头
+
+Java对象保存在内存中时，由以下三部分组成：对象头、实例数据和对齐填充字节。
+
+java的对象头由以下三部分组成：mark word、指向类信息的指针和数组长度（数组对象才有）。
+
+mark word包含：对象的hashcode、分代年龄和锁标志位。
+
+对象的实例数据就是在java代码中对象的属性和值。
+
+对齐填充字节：因为JVM要求java的对象占的内存大小应该是8bit的倍数，所以后面有几个字节用于把对象的大小补齐至8bit的倍数。
+
+**内存对齐的主要作用是：**
+
+1. 平台原因：不是所有的硬件平台都能访问任意地址上的任意数据的；某些硬件平台只能在某些地址处取某些特定类型的数据，否则抛出硬件异常。
+2.  性能原因：经过内存对齐后，CPU的内存访问速度大大提升。
+
+### main方法执行过程
+
+以下是示例代码：
+
+```java
+public class App {
+    public static void main(String[] args) {
+        Student s = new Student("dabin");
+        s.getName();
+    }
+}
+
+class Student {
+    public String name;
+
+    public Student(String name) {
+        this.name = name;
+    }
+
+    public String getName() {
+        return this.name;
+    }
+}
+```
+
+执行main方法的步骤如下:
+
+1. 编译好 App.java 后得到 App.class 后，执行 App.class，系统会启动一个 JVM 进程，从 classpath 路径中找到一个名为 App.class 的二进制文件，将 App 的类信息加载到运行时数据区的方法区内，这个过程叫做 App 类的加载
+2. JVM 找到 App 的主程序入口，执行main方法
+3. 这个main中的第一条语句为 `Student student = new Student("dabin") `，就是让 JVM 创建一个Student对象，但是这个时候方法区中是没有 Student 类的信息的，所以 JVM 马上加载 Student 类，把 Student 类的信息放到方法区中
+4. 加载完 Student 类后，JVM 在堆中为一个新的 Student 实例分配内存，然后调用构造函数初始化 Student 实例，这个 Student 实例持有 **指向方法区中的 Student 类的类型信息** 的引用
+5. 执行student.getName()时，JVM 根据 student 的引用找到 student 对象，然后根据 student 对象持有的引用定位到方法区中 student 类的类型信息的方法表，获得 getName() 的字节码地址。
+6. 执行getName()
 
 
 
-## Full GC触发条件
+### 对象创建过程
 
-1.年老代（Tenured）被写满
-2.持久代（Perm）被写满
-3.System.gc()被显式调用
+1. 类加载检查
 
+   虚拟机遇到一条 new 指令时，首先将去检查这个指令的参数是否能在常量池中定位到这个类的符号引用，并且检查这个符号引用代表的类是否已被加载过、解析和初始化过。如果没有，那必须先执行相应的类加载过程。
 
+2. 分配内存
 
-## 线上频繁fullgc/oom
+   在类加载检查通过后，接下来虚拟机将为新生对象分配内存。对象所需的内存大小在类加载完成后便可确定，为对象分配空间的任务等同于把一块确定大小的内存从 Java 堆中划分出来。
 
-大对象过多；参数设置不好，minor gc清理不掉内存，每次minor gc都会引发full gc；年轻代空间不足，需要回收老年代释放内存
+3. 初始化零值
 
+   分配到的内存空间都初始化为零值（不包括对象头），这一步操作保证了对象的实例字段在 Java 代码中可以不赋初始值就直接使用，程序能访问到这些字段的数据类型所对应的零值。
 
+4. 设置对象头
 
-## 内存泄露解决
+   Hotspot 虚拟机的对象头包括两部分信息，第一部分用于存储对象自身的运行时数据（哈希码、GC 分代年龄、锁状态标志等等），另一部分是类型指针，即对象指向它的类元数据的指针，虚拟机通过这个指针来确定这个对象是那个类的实例。
 
-1、释放无用对象的引用
-2、调整优化jvm配置
+5. 执行init方法
 
-- 设置-xms和-xmx等
-- 设置newSize和maxNewSize相等
-- 设置heapSize和permGen space
-
+   按照Java代码进行初始化。
 
 
-## 排查Java程序内存溢出问题
 
-- 设置Xmx小一点，这样最终产生的dump文件方便分析
-- 使用jhat或者jvisualvm分析dump文件，注重观察占用最多bytes的类是什么并分析这些类为什么没有被jvm回收从而导致oom
+## 参考资料
 
+- 周志明. 深入理解 Java 虚拟机 [M]. 机械工业出版社
